src/stylesheets/components/_item.scss
//
// Item
// --------------------------------------------------

#item {
  position: absolute;
  left: calc(100% - #{$panels-default-width});
  top: 0;
  width: 100%;
  height: 100%;
  z-index: $zindex-item;
  display: flex;
  background: $body-bg;

  .item-mode-enter &,
  .item-mode-leave & {
    transition: left $mode-transition;
  }

  .item-mode &,
  .item-mode-enter-active & {
    left: 0;
  }

  .item-mode-leave-active & {
    left: calc(100% - #{$panels-default-width});
  }

  .item-mode & {
    @if $platform == darwin {
      .panel-group-header {
        .toolbar-left {
          margin-left: (
            $window-controls-width
            + $window-controls-offset-x
            - $window-controls-margin);
        }
      }
    }
  }

  .icon-chevron {
    transform: rotate(-90deg);
  }
}

.item-container {
  flex: 1 1 0;
  display: flex;
  flex-direction: column;
  padding-left: $space-min;
}

